@@ -16,11 +16,11 @@ and quirks that I need to fix eventually.
 
 + 4.3 drivers:
 
+- C+j SPACE: space not registered
+- indent folding: fold marker not always updated
+switching wrap status in status bar doens't update vertical scroll
 - hypersearch results & folds
 - format: preserve comment chars at start
-- focus workaround:
-    view.setAlwaysOnTop(true);
-    view.setAlwaysOnTop(false); 
 - token values negative?
 - single line selection should not hide line highlight
 - jedit -encoding
